// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`containers/LogFace extended filters work correctly for Nutrition: Export button 1`] = `
<a
  download={true}
  href="http://example.com/superset/explore_json/?form_data={\\"slice_id\\":nutritionLogface}&csv=true"
  id="export-button"
>
  Export data
</a>
`;

exports[`containers/LogFace extended filters work correctly for Nutrition: risk filter 1`] = `
<select
  data-testid="select"
  onChange={[Function]}
>
  <option
    key="stunting"
    value="stunting"
  >
    Stunting
  </option>
  <option
    key="wasting"
    value="wasting"
  >
    Wasting
  </option>
  <option
    key="overweight"
    value="overweight"
  >
    Overweight
  </option>
  <option
    key="inappropriateFeeding"
    value="inappropriateFeeding"
  >
    Inappropriate Feeding
  </option>
  <option
    key="underweight"
    value="underweight"
  >
    Underweight
  </option>
  <option
    key="normal"
    value="normal"
  >
    Normal
  </option>
</select>
`;

exports[`containers/LogFace extended filters work correctly for pregnancy: location filter 1`] = `
<select
  data-testid="select"
  onChange={[Function]}
>
  <option
    key="c8054fa5-2d63-4cb5-bc52-173a4eb367fd"
    value="c8054fa5-2d63-4cb5-bc52-173a4eb367fd"
  >
    Gia Lai
  </option>
  <option
    key="1b8b7a76-15e1-446b-9d1e-c8cc97777a28"
    value="1b8b7a76-15e1-446b-9d1e-c8cc97777a28"
  >
    Điện Biên
  </option>
  <option
    key="eccfe905-0e03-4188-98bc-22f141cccd0e"
    value="eccfe905-0e03-4188-98bc-22f141cccd0e"
  >
    Kon Tum
  </option>
</select>
`;

exports[`containers/LogFace extended filters work correctly for pregnancy: risk filter 1`] = `
<select
  data-testid="select"
  onChange={[Function]}
>
  <option
    key="risk"
    value="risk"
  >
    Risk
  </option>
  <option
    key="redAlert"
    value="redAlert"
  >
    Red alert
  </option>
  <option
    key="noRisk"
    value="noRisk"
  >
    No risk
  </option>
</select>
`;

exports[`containers/LogFace extended renders correctly: Export button 1`] = `
<a
  download={true}
  href="http://example.com/superset/explore_json/?form_data={\\"slice_id\\":pregnancyLogface}&csv=true"
  id="export-button"
>
  Export data
</a>
`;

exports[`containers/LogFace extended renders correctly: logface title 1`] = `
<h2
  id="logface_title"
>
  Log Face - Pregnancy
</h2>
`;

exports[`containers/LogFace extended renders correctly: search div 1`] = `
<input
  className="form-control logface-search"
  id="search"
  name="input"
  onChange={[Function]}
  placeholder="Search ID, Reporter, Patients"
  type="text"
/>
`;

exports[`containers/LogFace extended renders correctly: table td 1`] = `
<td
  className="default-width"
>
  13/06/2021
</td>
`;

exports[`containers/LogFace extended renders correctly: table td 2`] = `
<td
  className="default-width"
/>
`;

exports[`containers/LogFace extended renders correctly: table td 3`] = `
<td
  className="default-width"
>
  Update Pregnancy Detection
</td>
`;

exports[`containers/LogFace extended renders correctly: table td 4`] = `
<td
  className="default-width"
>
  Husna Hariz
</td>
`;

exports[`containers/LogFace extended renders correctly: table td 5`] = `
<td
  className="default-width"
>
  <Link
    to="/pregnancy_log_face/patient_detail/101EL4?module=Pregnancy"
  >
    <LinkAnchor
      href="/pregnancy_log_face/patient_detail/101EL4?module=Pregnancy"
      navigate={[Function]}
    >
      <a
        href="/pregnancy_log_face/patient_detail/101EL4?module=Pregnancy"
        onClick={[Function]}
      >
        101EL4
      </a>
    </LinkAnchor>
  </Link>
</td>
`;

exports[`containers/LogFace extended renders correctly: table td 6`] = `
<td
  className="small-width"
>
  45 years
</td>
`;

exports[`containers/LogFace extended renders correctly: table td 7`] = `
<td
  className="large-width"
>
  <ul>
    <li
      key="Name : SELANI   TANI-0"
    >
      Name : SELANI   TANI
    </li>
    <li
      key="Phone Number : 0778910121-1"
    >
      Phone Number : 0778910121
    </li>
    <li
      key="Health Insurance : 0083415011-2"
    >
      Health Insurance : 0083415011
    </li>
  </ul>
</td>
`;

exports[`containers/LogFace extended renders correctly: table td 8`] = `
<td
  className="default-width"
>
  <Link
    to="/pregnancy_log_face/patient_detail/101EL4?module=Pregnancy"
  >
    <LinkAnchor
      href="/pregnancy_log_face/patient_detail/101EL4?module=Pregnancy"
      navigate={[Function]}
    >
      <a
        href="/pregnancy_log_face/patient_detail/101EL4?module=Pregnancy"
        onClick={[Function]}
      >
        <RiskColoring
          displayValue="Not Set"
          risk={null}
        >
          <span
            className="badge"
            style={
              Object {
                "backgroundColor": "#6c757d",
              }
            }
          >
            <div>
              <p>
                Not Set
              </p>
            </div>
          </span>
        </RiskColoring>
      </a>
    </LinkAnchor>
  </Link>
</td>
`;

exports[`containers/LogFace extended renders correctly: table td 9`] = `
<td
  className="default-width"
>
  13/06/2021
</td>
`;

exports[`containers/LogFace extended renders correctly: table td 10`] = `
<td
  className="default-width"
/>
`;

exports[`containers/LogFace extended renders correctly: table td 11`] = `
<td
  className="default-width"
>
  Pregnancy Detection
</td>
`;

exports[`containers/LogFace extended renders correctly: table td 12`] = `
<td
  className="default-width"
>
  Husna Hariz
</td>
`;

exports[`containers/LogFace extended renders correctly: table td 13`] = `
<td
  className="default-width"
>
  <Link
    to="/pregnancy_log_face/patient_detail/101EL4?module=Pregnancy"
  >
    <LinkAnchor
      href="/pregnancy_log_face/patient_detail/101EL4?module=Pregnancy"
      navigate={[Function]}
    >
      <a
        href="/pregnancy_log_face/patient_detail/101EL4?module=Pregnancy"
        onClick={[Function]}
      >
        101EL4
      </a>
    </LinkAnchor>
  </Link>
</td>
`;

exports[`containers/LogFace extended renders correctly: table td 14`] = `
<td
  className="small-width"
>
  45 years
</td>
`;

exports[`containers/LogFace extended renders correctly: table td 15`] = `
<td
  className="large-width"
>
  <ul>
    <li
      key="Name : SELANI   TANI-0"
    >
      Name : SELANI   TANI
    </li>
    <li
      key="Phone Number : 0778910121-1"
    >
      Phone Number : 0778910121
    </li>
    <li
      key="Health Insurance : KCO-2"
    >
      Health Insurance : KCO
    </li>
  </ul>
</td>
`;

exports[`containers/LogFace extended renders correctly: table td 16`] = `
<td
  className="default-width"
>
  <Link
    to="/pregnancy_log_face/patient_detail/101EL4?module=Pregnancy"
  >
    <LinkAnchor
      href="/pregnancy_log_face/patient_detail/101EL4?module=Pregnancy"
      navigate={[Function]}
    >
      <a
        href="/pregnancy_log_face/patient_detail/101EL4?module=Pregnancy"
        onClick={[Function]}
      >
        <RiskColoring
          displayValue="Not Set"
          risk={null}
        >
          <span
            className="badge"
            style={
              Object {
                "backgroundColor": "#6c757d",
              }
            }
          >
            <div>
              <p>
                Not Set
              </p>
            </div>
          </span>
        </RiskColoring>
      </a>
    </LinkAnchor>
  </Link>
</td>
`;

exports[`containers/LogFace extended renders correctly: table td 17`] = `
<td
  className="default-width"
>
  11/06/2021
</td>
`;

exports[`containers/LogFace extended renders correctly: table td 18`] = `
<td
  className="default-width"
/>
`;

exports[`containers/LogFace extended renders correctly: table td 19`] = `
<td
  className="default-width"
>
  Update Pregnancy Detection
</td>
`;

exports[`containers/LogFace extended renders correctly: table td 20`] = `
<td
  className="default-width"
>
  Husna Hariz
</td>
`;

exports[`containers/LogFace extended renders correctly: table td 21`] = `
<td
  className="default-width"
>
  <Link
    to="/pregnancy_log_face/patient_detail/101EK6?module=Pregnancy"
  >
    <LinkAnchor
      href="/pregnancy_log_face/patient_detail/101EK6?module=Pregnancy"
      navigate={[Function]}
    >
      <a
        href="/pregnancy_log_face/patient_detail/101EK6?module=Pregnancy"
        onClick={[Function]}
      >
        101EK6
      </a>
    </LinkAnchor>
  </Link>
</td>
`;

exports[`containers/LogFace extended renders correctly: table td 22`] = `
<td
  className="small-width"
>
  47 years
</td>
`;

exports[`containers/LogFace extended renders correctly: table td 23`] = `
<td
  className="large-width"
>
  <ul>
    <li
      key="Name : LETOYA   AMANI-0"
    >
      Name : LETOYA   AMANI
    </li>
    <li
      key="Phone Number : 0771110121-1"
    >
      Phone Number : 0771110121
    </li>
    <li
      key="Health Insurance : 0083415045-2"
    >
      Health Insurance : 0083415045
    </li>
  </ul>
</td>
`;

exports[`containers/LogFace extended renders correctly: table td 24`] = `
<td
  className="default-width"
>
  <Link
    to="/pregnancy_log_face/patient_detail/101EK6?module=Pregnancy"
  >
    <LinkAnchor
      href="/pregnancy_log_face/patient_detail/101EK6?module=Pregnancy"
      navigate={[Function]}
    >
      <a
        href="/pregnancy_log_face/patient_detail/101EK6?module=Pregnancy"
        onClick={[Function]}
      >
        <RiskColoring
          displayValue="Not Set"
          risk={null}
        >
          <span
            className="badge"
            style={
              Object {
                "backgroundColor": "#6c757d",
              }
            }
          >
            <div>
              <p>
                Not Set
              </p>
            </div>
          </span>
        </RiskColoring>
      </a>
    </LinkAnchor>
  </Link>
</td>
`;

exports[`containers/LogFace extended renders correctly: table td 25`] = `
<td
  className="default-width"
>
  11/06/2021
</td>
`;

exports[`containers/LogFace extended renders correctly: table td 26`] = `
<td
  className="default-width"
/>
`;

exports[`containers/LogFace extended renders correctly: table td 27`] = `
<td
  className="default-width"
>
  Pregnancy Registration
</td>
`;

exports[`containers/LogFace extended renders correctly: table td 28`] = `
<td
  className="default-width"
>
  Husna Hariz
</td>
`;

exports[`containers/LogFace extended renders correctly: table td 29`] = `
<td
  className="default-width"
>
  <Link
    to="/pregnancy_log_face/patient_detail/101EK6?module=Pregnancy"
  >
    <LinkAnchor
      href="/pregnancy_log_face/patient_detail/101EK6?module=Pregnancy"
      navigate={[Function]}
    >
      <a
        href="/pregnancy_log_face/patient_detail/101EK6?module=Pregnancy"
        onClick={[Function]}
      >
        101EK6
      </a>
    </LinkAnchor>
  </Link>
</td>
`;

exports[`containers/LogFace extended renders correctly: table td 30`] = `
<td
  className="small-width"
>
  47 years
</td>
`;

exports[`containers/LogFace extended renders correctly: table td 31`] = `
<td
  className="large-width"
>
  <ul>
    <li
      key="EDD : 27/07/2021-0"
    >
      EDD : 27/07/2021
    </li>
    <li
      key="Gravidity : 2-1"
    >
      Gravidity : 2
    </li>
    <li
      key="Parity : 1-2"
    >
      Parity : 1
    </li>
    <li
      key="Weight : 58kg-3"
    >
      Weight : 58kg
    </li>
    <li
      key="Height : 170cm-4"
    >
      Height : 170cm
    </li>
    <li
      key="BMI : -5"
    >
      BMI : 
    </li>
    <li
      key="Previous Gynaecology History : Diabetes-6"
    >
      Previous Gynaecology History : Diabetes
    </li>
    <li
      key="Current Symptoms : Diarrhea-7"
    >
      Current Symptoms : Diarrhea
    </li>
  </ul>
</td>
`;

exports[`containers/LogFace extended renders correctly: table td 32`] = `
<td
  className="default-width"
>
  <Link
    to="/pregnancy_log_face/patient_detail/101EK6?module=Pregnancy"
  >
    <LinkAnchor
      href="/pregnancy_log_face/patient_detail/101EK6?module=Pregnancy"
      navigate={[Function]}
    >
      <a
        href="/pregnancy_log_face/patient_detail/101EK6?module=Pregnancy"
        onClick={[Function]}
      >
        <RiskColoring
          displayValue="Risk"
          risk="risk"
        >
          <span
            className="badge"
            style={
              Object {
                "backgroundColor": "#ffc107",
              }
            }
          >
            <div>
              <p>
                Risk
              </p>
            </div>
          </span>
        </RiskColoring>
      </a>
    </LinkAnchor>
  </Link>
</td>
`;

exports[`containers/LogFace extended renders correctly: table td 33`] = `
<td
  className="default-width"
>
  11/06/2021
</td>
`;

exports[`containers/LogFace extended renders correctly: table td 34`] = `
<td
  className="default-width"
/>
`;

exports[`containers/LogFace extended renders correctly: table td 35`] = `
<td
  className="default-width"
>
  Pregnancy Detection
</td>
`;

exports[`containers/LogFace extended renders correctly: table td 36`] = `
<td
  className="default-width"
>
  Husna Hariz
</td>
`;

exports[`containers/LogFace extended renders correctly: table td 37`] = `
<td
  className="default-width"
>
  <Link
    to="/pregnancy_log_face/patient_detail/101EK6?module=Pregnancy"
  >
    <LinkAnchor
      href="/pregnancy_log_face/patient_detail/101EK6?module=Pregnancy"
      navigate={[Function]}
    >
      <a
        href="/pregnancy_log_face/patient_detail/101EK6?module=Pregnancy"
        onClick={[Function]}
      >
        101EK6
      </a>
    </LinkAnchor>
  </Link>
</td>
`;

exports[`containers/LogFace extended renders correctly: table td 38`] = `
<td
  className="small-width"
>
  47 years
</td>
`;

exports[`containers/LogFace extended renders correctly: table td 39`] = `
<td
  className="large-width"
>
  <ul>
    <li
      key="Name : LETOYA   AMANI-0"
    >
      Name : LETOYA   AMANI
    </li>
    <li
      key="Phone Number : 0771110121-1"
    >
      Phone Number : 0771110121
    </li>
    <li
      key="Health Insurance : KCO-2"
    >
      Health Insurance : KCO
    </li>
  </ul>
</td>
`;

exports[`containers/LogFace extended renders correctly: table td 40`] = `
<td
  className="default-width"
>
  <Link
    to="/pregnancy_log_face/patient_detail/101EK6?module=Pregnancy"
  >
    <LinkAnchor
      href="/pregnancy_log_face/patient_detail/101EK6?module=Pregnancy"
      navigate={[Function]}
    >
      <a
        href="/pregnancy_log_face/patient_detail/101EK6?module=Pregnancy"
        onClick={[Function]}
      >
        <RiskColoring
          displayValue="Not Set"
          risk={null}
        >
          <span
            className="badge"
            style={
              Object {
                "backgroundColor": "#6c757d",
              }
            }
          >
            <div>
              <p>
                Not Set
              </p>
            </div>
          </span>
        </RiskColoring>
      </a>
    </LinkAnchor>
  </Link>
</td>
`;

exports[`containers/LogFace extended sms type filter work correctly: Export button 1`] = `
<a
  download={true}
  href="http://example.com/superset/explore_json/?form_data={\\"slice_id\\":nbcPncLogFace}&csv=true"
  id="export-button"
>
  Export data
</a>
`;
